--- a/2.html
+++ b/2.html
@@ -1,8 +1,40 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - HTML</title>
+  <title>WEB - CSS</title>
   <meta charset="utf-8">
+  <style>
+    body{
+      margin:0;
+    }
+    a{
+      color:black;
+      text-decoration:none;
+    }
+    h1{
+      font-size:45px;
+      text-align:center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding:20px;
+    }
+    ol{
+      border-right:1px solid gray;
+      width:100px;
+      margin:0;
+      padding:20px;
+    }
+    #grid{
+      display:grid;
+      grid-template-columns:150px 1fr;
+    }
+    #grid ol{
+      padding-left:33px;
+    }
+    #grid #article{
+      padding-left:25px;
+    }
+  </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118826599-1"></script>
   <script>
@@ -14,16 +46,28 @@
   </script>
 </head>
 <body>
-  <h1><a href="index.html">WEB</a><h1>
+  <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">HTML</a></li>
+      <li><a href="2.html">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
+    </ol>
+  <!--
+  <h1><a href="index.html"><font color="red">WEBpt</font>/a><h1>
   <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html"><font color="red">HTMpt</font></a></li>
+    <li><a href="2.html"><font color="red">CSSpt</font>/a></li>
+    <li><a href="3.html"><font color="red">JavaScript</font></a></li>
   </ol>
-  <h2>CSS</h2>
-  <p>
-    Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
-  </p>
+  -->
+    <div id="article">
+      <h2>CSS</h2>
+      <p>
+        Cascading Style Sheets (<a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">CSS</a>) is a style sheet language used for describing the presentation of a document written in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
+      </p>
+    </div>
+  </div>
   <p>
     <div id="disqus_thread"></div>
     <script>
