--- a/index.html
+++ b/index.html
@@ -3,38 +3,9 @@
 <head>
   <title>WEB - Welcome</title>
   <meta charset="utf-8">
-  <style>
-    body{
-      margin:0;
-    }
-    a{
-      color:black;
-      text-decoration:none;
-    }
-    h1{
-      font-size:45px;
-      text-align:center;
-      border-bottom:1px solid gray;
-      margin:0;
-      padding:20px;
-    }
-    ol{
-      border-right:1px solid gray;
-      width:100px;
-      margin:0;
-      padding:20px;
-    }
-    #grid{
-      display:grid;
-      grid-template-columns:150px 1fr;
-    }
-    #grid ol{
-      padding-left:33px;
-    }
-    #grid #article{
-      padding-left:25px;
-    }
-  </style>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="colors.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118826599-1"></script>
   <script>
@@ -49,16 +20,19 @@
   <h1><a href="index.html">WEB</a></h1>
   <div id="grid">
     <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
+      <li><a onclick="fetchPage('html')">HTML</a></li>
+      <li><a onclick="fetchPage('css')">CSS</a></li>
+      <li><a onclick="fetchPage('javascript')">JavaScript</a></li>
+      <input id="night_day" type="button" value="night" onclick="nightDayHandler(this);">
     </ol>
-    <div id="article">
-      <h2>WEB</h2>
-      <p>
-        The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
-      </p>
-    </div>
+    <article>
+      <div id="article">
+        <h2>WEB</h2>
+        <p>
+          The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
+        </p>
+      </div>
+    </article>
   </div>
   <p>
       <div id="disqus_thread"></div>
@@ -96,5 +70,14 @@
     })();
     </script>
     <!--End of Tawk.to Script-->
+    <script>
+    function fetchPage(name){
+      fetch(name).then(function(response){
+        response.text().then(function(text){
+          document.querySelector('article').innerHTML = text;
+        })
+      });
+    }
+    </script>
 </body>
 </html>
